--- a/LogAdapter.Interfaces/LogAdapter.Interfaces.csproj
+++ b/LogAdapter.Interfaces/LogAdapter.Interfaces.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="LogAdapter.Interfaces.1.0.0-betta.nupkg" />
+  </ItemGroup>
+
 </Project>
